fix: api 정리
