# src/routes/book.routes.js
@@ -1,20 +1,21 @@
 import express from "express";
 import * as bookCtrl from "../controllers/book.controller.js";
+import { authMiddleware } from "../middlewares/auth.js";
 import reviewRouter from "./review.routes.js";
 
 const bookRouter = express.Router();
 
-// CSV 업로드로 도서 등록
-bookRouter.post("/import/csv", bookCtrl.uploadCsvMiddleware, bookCtrl.importBooksFromCsv);
+// 도서 등록
+bookRouter.post("/", authMiddleware, bookCtrl.createBook);
 
 // 도서 목록 조회
 bookRouter.get("/", bookCtrl.getBookList);
 
-// isbn으로 도서 조회
-bookRouter.get("/isbn/:isbn", bookCtrl.getBookToIsbn);
-
 // 도서 단일 조회
 bookRouter.get("/:bookId", bookCtrl.getBook);
+
+// 도서 수정
+bookRouter.put("/:bookId", authMiddleware, bookCtrl.updateBook);
 
 // 리뷰 라우터
 bookRouter.use("/:bookId/reviews", reviewRouter);
